--- a/public/html/index.html
+++ b/public/html/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div ng-controller="MainController">
-      <input type="text" ng-model='newTodo'>
+      <input type="text" ng-model='newTodo.description'>  <!-- added .description so instead of this controller making a string it makes an object to correlate with ngmodel before-->
       <button ng-click='createTodo(newTodo)'>Add New Todo</button>
       <ul>
         <li ng-repeat='todo in todos track by $index'>
